crates/ddlog-syntax/tests/inline/fail/unclosed_relation_args.rast
ROOT@0..27
  COMMENT@0..12 "// kind:item"
  WHITESPACE@12..13 "\n"
  ITEM@13..27
    RELATION_DEF@13..26
      REL_MODS@13..13
      RELATION@13..21 "relation"
      WHITESPACE@21..22 " "
      REL_NAME@22..25
        IDENT@22..25 "Foo"
      L_PAREN@25..26 "("
    WHITESPACE@26..27 "\n"
--
Error: expected ')' but instead the file ends
   ,-[inline/fail/unclosed_relation_args.dl:2:15]
   |
 2 | relation Foo(
   :               | 
   :               `- the file ends here
---'
--
// kind:item
relation Foo(

